--- a/languages/woo-kyber-payment.po
+++ b/languages/woo-kyber-payment.po
@@ -56,7 +56,7 @@ msgstr ""
 #: admin/partials/kyber-settings.php:37
 msgid ""
 "Select network which you want payment to run on, Ropsten for test and "
-"Mainnet for produdction"
+"Mainnet for production"
 msgstr ""
 
 #: admin/partials/kyber-settings.php:41
