Updated Lithuanian translation

--- a/languages/woo-kyber-payment-lt_LT.po
+++ b/languages/woo-kyber-payment-lt_LT.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: widget woocommerce\n"
 "POT-Creation-Date: 2018-10-06 08:34+0700\n"
-"PO-Revision-Date: 2018-10-10 15:54+0300\n"
+"PO-Revision-Date: 2018-10-10 16:00+0300\n"
 "Last-Translator: \n"
 "Language-Team: Kyber (ha.hoang@kyber.network)\n"
 "Language: lt_LT\n"
@@ -67,7 +67,7 @@ msgid ""
 "Select network which you want payment to run on, Ropsten for test and "
 "Mainnet for produdction"
 msgstr ""
-"Pasirinkite tinklą, kuriame norite paleisti mokėjimus, Ropsten restavimui ir "
+"Pasirinkite tinklą, kuriame norite paleisti mokėjimus, Ropsten testavimui ir "
 "Mainnet produkcijai"
 
 #: admin/partials/kyber-settings.php:52
@@ -95,8 +95,9 @@ msgid ""
 "This is mode for display Kyber widget style, tab will load Kyber widget in "
 "new tab, iframe will load Kyber widget inside order received page."
 msgstr ""
-"Kyber valdiklio rodymo stilius, skirtukas įkelts Kyber valdiklį naujame "
-"skirtuke, iframe bus įkeltas Kyber valdiklis užsakymo gavimo puslapyje."
+"Tai yra Kyber valdiklio rodymo stilius, skirtukas įkelts Kyber valdiklį "
+"naujame skirtuke, iframe bus įkeltas Kyber valdiklis užsakymo gavimo "
+"puslapyje."
 
 #: admin/partials/kyber-settings.php:76
 msgid "Block Confirmation"
